[gd_scene load_steps=12 format=3 uid="uid://c5lxkh4l5n80c"]

[ext_resource type="Texture2D" uid="uid://qegmsdaf40ae" path="res://assets/frog_spritesheets/frog_green_spritesheet.png" id="1_mqod6"]
[ext_resource type="Script" uid="uid://t4d7nytj0y2g" path="res://scenes/frog.gd" id="1_qyo2l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mqod6"]
atlas = ExtResource("1_mqod6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu7fg"]
atlas = ExtResource("1_mqod6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycnbg"]
atlas = ExtResource("1_mqod6")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqhdc"]
atlas = ExtResource("1_mqod6")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyo2l"]
atlas = ExtResource("1_mqod6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq8tc"]
atlas = ExtResource("1_mqod6")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g2vb"]
atlas = ExtResource("1_mqod6")
region = Rect2(128, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8yr8"]
animations = [{
"frames": [],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqod6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu7fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycnbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqhdc")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyo2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq8tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g2vb")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4au2m"]
radius = 8.0

[node name="Frog" type="CharacterBody2D" groups=["frog"]]
z_index = 3
collision_layer = 4
collision_mask = 4
script = ExtResource("1_qyo2l")

[node name="FrogSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p8yr8")
animation = &"jump"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_4au2m")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
